# adventofcode2023

./: .gitignore  Cargo.toml
p1_trebuchet/: Cargo.toml
p1a_trebuchet/: Cargo.toml  problem.md
p1a_trebuchet/src/: main.rs
p1b_trebuchet/: Cargo.toml  problem.md
p1b_trebuchet/src/: main.rs
p2a_cube_conundrum/: Cargo.toml
p2a_cube_conundrum/src/: main.rs
p2b_cube_conundrum/: Cargo.toml
p3a_gear_ratios/: Cargo.toml
p3b_gear_ratios/: Cargo.toml
p4a_scratchcards/: Cargo.toml
p4b_scratchcards/: Cargo.toml
p5a_if_you_give_a_seed_a_fertilizer/: Cargo.toml
p5b_if_you_give_a_seed_a_fertilizer/: Cargo.toml
src/: main.rs
